--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Translation-of-a-Savage-Complete_6214
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Parker, Gilbert
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1285
     wikipedia: http://en.wikipedia.org/wiki/Gilbert_Parker
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/6214#The-Translation-of-a-Savage-Complete
 gutenberg_issued: '2004-11-16'
 gutenberg_type: Text
 identifiers:
